syntax = "proto3";

option csharp_namespace = "OddDotNet";

message SpanQueryRequest {
  repeated Where whereFilters = 1;
  Take take = 2;
  optional Duration duration = 3;
}

message Where {
  oneof Filter {
    WhereAttributeStringEqualFilter attributeStringEqual = 1;
    WhereAttributeIntEqualFilter attributeIntEqual = 2;
    WhereAttributeExistsFilter attributeExists = 3;
    WhereSpanPropertyFilter spanProperty = 4;
  }
}

message Take {
  oneof TakeType {
    TakeFirst takeFirst = 1;
    TakeAll takeAll = 2;
    TakeExact takeExact = 3;
  }
}

message TakeFirst {}

message TakeAll {}

message TakeExact {
  int32 count = 1;
}

message WhereAttributeStringEqualFilter {
  string attribute = 1;
  string compare = 2;
}

message WhereAttributeIntEqualFilter {
  string attribute = 1;
  int64 compare = 2;
}

message WhereAttributeExistsFilter {
  string attribute = 1;
}

message WhereSpanPropertyFilter {
  oneof property {
    SpanNameProperty spanName = 1;
    SpanIdProperty spanId = 2;
  }
}

message Duration {
  oneof value {
    uint64 secondsValue = 1;
    uint64 millisecondsValue = 2;
    uint64 minutesValue = 3;
  }
}

message SpanNameProperty {
  StringCompareType compareAs = 1;
  optional string compare = 2;
}

message SpanIdProperty {
  ByteStringCompareType compareAs = 1;
  bytes compare = 2;
}

enum ByteStringCompareType {
  BYTE_STRING_COMPARE_TYPE_NONE = 0;
  BYTE_STRING_COMPARE_TYPE_EQUALS = 1;
  BYTE_STRING_COMPARE_TYPE_NOT_EQUALS = 2;
}

enum StringCompareType {
  STRING_COMPARE_TYPE_NONE = 0;
  STRING_COMPARE_TYPE_EQUALS = 1;
  STRING_COMPARE_TYPE_NOT_EQUALS = 2;
  STRING_COMPARE_TYPE_CONTAINS = 3;
  STRING_COMPARE_TYPE_NOT_CONTAINS = 4;
  STRING_COMPARE_TYPE_IS_EMPTY = 5;
  STRING_COMPARE_TYPE_IS_NOT_EMPTY = 6;
}