syntax = "proto3";

message SpanQueryResponse {
  
}