syntax = "proto3";

option csharp_namespace = "OddDotNet";

message SpanResetRequest{}